News UAT/force-app/main/default/objects/Division_Information__c/Division_Information__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting includes information for all divisions including billing address, etc</description>
    <label>Division Information</label>
</CustomObject>