News UAT/force-app/main/default/objects/Division_Information__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>ABN for each division</description>
    <label>ABN</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>