News UAT/force-app/main/default/objects/Division_Information__c/fields/SwitchBoard__c.field-meta.xml
<CustomField>
    <fullName>SwitchBoard__c</fullName>
    <description>switchboard for each division</description>
    <label>SwitchBoard</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>